change img side to fix overflow problem

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -174,8 +174,6 @@ body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(2) > div > d
 /* Adjust Test1image */
 body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(4) {
     padding: 0px;
-    display: flex;
-    justify-content: flex-end;
 }
 
 body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(4) > div {
@@ -194,7 +192,7 @@ body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(4) > div > d
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 150px;
+    margin-left: 150px;
     font-size: 40px;
 }
 
@@ -599,7 +597,7 @@ body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(11) {
 
     body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(4) > div > div > div > div.blockImage{
         position: relative;
-        right:-63px;
+        left:-63px;
         margin: 0px;
         overflow: hidden;
     }
@@ -612,11 +610,17 @@ body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(11) {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-right: 10px;
+        margin-left: 10px;
         font-size: 20px;
+        position: relative;
+        right: 70px;
     }
     body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(4)  > div > div > div > div.blockContent > h2 > div > span > p{
         font-size: 25px;
+    }
+    .imageAlignSide .blockImage {
+        flex: 0 1 450px;
+        max-width: 500px;
     }
 
     body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(8) > div > div > div > div.blockImage{
@@ -640,7 +644,7 @@ body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(11) {
         justify-content: center;
         margin-left: 10px;
         position: relative;
-        right: 80px;
+        right: 70px;
     }
     body > div.navPusher.singleRowMobileNav > div > div > div:nth-child(8)  > div > div > div > div.blockContent > h2 > div > span > p{
         font-size: 25px;
